// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual regression > should snapshot ProgressBar 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      class="text-center text-sm font-medium text-muted-foreground"
    >
      Pergunta 
      3
       de 
      10
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
      data-max="100"
      data-state="loading"
      data-value="20"
      role="progressbar"
    >
      <div
        class="h-full w-full flex-1 bg-primary transition-all"
        data-max="100"
        data-state="loading"
        data-value="20"
        style="transform: translateX(-80%);"
      />
    </div>
  </div>
</div>
`;

exports[`Visual regression > should snapshot QuestionCard initial render 1`] = `
<div>
  <div
    class="space-y-6"
    style="opacity: 0; transform: translateY(20px);"
  >
    <h2
      class="text-2xl font-semibold"
    >
      Qual é a capital do Brasil?
    </h2>
    <div
      class="space-y-3"
    >
      <div
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        <button
          class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full justify-start text-base h-auto whitespace-normal"
          data-testid="alternative-0"
        >
          São Paulo
        </button>
      </div>
      <div
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        <button
          class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full justify-start text-base h-auto whitespace-normal"
          data-testid="alternative-1"
        >
          Rio de Janeiro
        </button>
      </div>
      <div
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        <button
          class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full justify-start text-base h-auto whitespace-normal"
          data-testid="alternative-2"
        >
          Brasília
        </button>
      </div>
      <div
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        <button
          class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full justify-start text-base h-auto whitespace-normal"
          data-testid="alternative-3"
        >
          Salvador
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual regression > should snapshot QuestionCard with selected answer 1`] = `
<div>
  <div
    class="space-y-6"
    style="opacity: 0; transform: translateY(20px);"
  >
    <h2
      class="text-2xl font-semibold"
    >
      Qual é a capital do Brasil?
    </h2>
    <div
      class="space-y-3"
    >
      <div
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        <button
          class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full justify-start text-base h-auto whitespace-normal"
          data-testid="alternative-0"
        >
          São Paulo
        </button>
      </div>
      <div
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        <button
          class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full justify-start text-base h-auto whitespace-normal"
          data-testid="alternative-1"
        >
          Rio de Janeiro
        </button>
      </div>
      <div
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        <button
          class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-primary-foreground shadow hover:bg-primary/90 px-4 py-2 w-full justify-start text-base h-auto whitespace-normal bg-primary"
          data-testid="alternative-2"
        >
          Brasília
        </button>
      </div>
      <div
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        <button
          class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full justify-start text-base h-auto whitespace-normal"
          data-testid="alternative-3"
        >
          Salvador
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual regression > should snapshot QuizFlow initial render 1`] = `
<div>
  <div
    class="mx-auto max-w-2xl space-y-8 px-4 py-6"
  >
    <div
      class="space-y-2"
    >
      <div
        class="text-center text-sm font-medium text-muted-foreground"
      >
        Pergunta 
        1
         de 
        1
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
        data-max="100"
        data-state="loading"
        data-value="0"
        role="progressbar"
      >
        <div
          class="h-full w-full flex-1 bg-primary transition-all"
          data-max="100"
          data-state="loading"
          data-value="0"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
    <div
      class="relative overflow-hidden"
    >
      <div
        style="opacity: 1; transform: none;"
      >
        <div
          class="space-y-6"
          style="opacity: 1; transform: none;"
        >
          <h2
            class="text-2xl font-semibold"
          >
            Qual é a capital do Brasil?
          </h2>
          <div
            class="space-y-3"
          >
            <div
              style="opacity: 1; transform: none;"
              tabindex="0"
            >
              <button
                class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full justify-start text-base h-auto whitespace-normal"
                data-testid="alternative-0"
              >
                São Paulo
              </button>
            </div>
            <div
              style="opacity: 1; transform: none;"
              tabindex="0"
            >
              <button
                class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full justify-start text-base h-auto whitespace-normal"
                data-testid="alternative-1"
              >
                Rio de Janeiro
              </button>
            </div>
            <div
              style="opacity: 1; transform: none;"
              tabindex="0"
            >
              <button
                class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full justify-start text-base h-auto whitespace-normal"
                data-testid="alternative-2"
              >
                Brasília
              </button>
            </div>
            <div
              style="opacity: 1; transform: none;"
              tabindex="0"
            >
              <button
                class="inline-flex items-center gap-2 rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full justify-start text-base h-auto whitespace-normal"
                data-testid="alternative-3"
              >
                Salvador
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-between"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-secondary text-secondary-foreground shadow-sm hover:bg-secondary/80 h-9 px-4 py-2"
        data-testid="previous-button"
        disabled=""
      >
        Anterior
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-9 px-4 py-2"
        data-testid="next-button"
        disabled=""
      >
        Ver Resultado
      </button>
    </div>
  </div>
</div>
`;
